[gd_scene load_steps=2 format=3 uid="uid://6a4ac2dlcdyx"]

[ext_resource type="Script" path="res://scenes/Menus/choose_games.gd" id="1_4n2il"]

[node name="Choose Games" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4n2il")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Games" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game 1" type="Button" parent="Games"]
layout_mode = 2
text = "Game 1"

[node name="Game 2" type="Button" parent="Games"]
layout_mode = 2
text = "Game 2"

[node name="Game 3" type="Button" parent="Games"]
layout_mode = 2
text = "Game 3"

[node name="Create Game" type="Button" parent="Games"]
layout_mode = 2
text = "Create Game"

[connection signal="pressed" from="Games/Game 1" to="." method="_on_game_1_pressed"]
[connection signal="pressed" from="Games/Game 2" to="." method="_on_game_2_pressed"]
[connection signal="pressed" from="Games/Game 3" to="." method="_on_game_3_pressed"]
[connection signal="pressed" from="Games/Create Game" to="." method="_on_create_game_pressed"]
